Added logger in patientService